Add new build files with Prices connection to db

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uuid": "^11.1.0"
   },
   "scripts": {
-    "start": "yarn nodemon server.js"
+    "start": "yarn nodemon server.js",
+    "seed": "node seeds/concert.seed.js"
   }
 }
