--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "chai-http": "4.3.0",
     "mocha": "6.2.1",
     "nodemon": "^3.1.9",
-    "onchange": "6.1.0"
+    "onchange": "6.1.0",
+    "snyk": "^1.1297.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
+    "mongo-sanitize": "1.0.1",
     "mongoose": "^8.13.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -23,6 +27,7 @@
     "start": "yarn nodemon server.js",
     "seed": "node seeds/concert.seed.js",
     "test": "mocha \"./{,!(node_modules|client)/**/}*.test.js\"",
-    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
+    "snyk": "snyk test"
   }
 }
