--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.1.0",
     "mongo-sanitize": "1.0.1",
     "mongoose": "^8.13.2",
+    "sanitize-html": "^2.17.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
